// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load plugins Loads plugins defined with an object but without an option key 1`] = `
Array [
  Object {
    "id": "Plugin dev-404-page",
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPages",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin component-page-creator",
    "name": "component-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin component-layout-creator",
    "name": "component-layout-creator",
    "nodeAPIs": Array [
      "createLayouts",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin internal-data-bridge",
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin prod-404",
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin query-runner",
    "name": "query-runner",
    "nodeAPIs": Array [
      "onCreatePage",
      "onCreateLayout",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "name": "TEST",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
  },
  Object {
    "id": "Plugin default-site-plugin",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "d41d8cd98f00b204e9800998ecf8427e",
  },
]
`;

exports[`Load plugins load plugins for a site 1`] = `
Array [
  Object {
    "id": "Plugin dev-404-page",
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPages",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin component-page-creator",
    "name": "component-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin component-layout-creator",
    "name": "component-layout-creator",
    "nodeAPIs": Array [
      "createLayouts",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin internal-data-bridge",
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin prod-404",
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin query-runner",
    "name": "query-runner",
    "nodeAPIs": Array [
      "onCreatePage",
      "onCreateLayout",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin default-site-plugin",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "d41d8cd98f00b204e9800998ecf8427e",
  },
]
`;
